# Babel

./: CMakeLists.txt  Makefile
src/Client/QtBabel/: BabelClient.cpp  BabelClient.h  Contact.h  Event.cpp  Event.hpp  ICircularBuffer.hpp  IGui.hpp  INetwork.hpp  IUdpSocket.hpp  IVoiceInterpreter.hpp  MainWindow.ui  Makefile  Message.cpp  Message.h  QtBabel  QtBabel.pro  QtBabel.pro.user.33d6914  QtCircularBuffer.cpp  QtCircularBuffer.h  QtGui.cpp  QtGui.h  QtNet.cpp  QtNet.h  QtUdpSocket.cpp  QtUdpSocket.h  RingBuffer.cpp  RingBuffer.hpp  VoiceInterpreter.cpp  VoiceInterpreter.h  contact.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/Client/QtBabel/test/: Makefile  clientTest  clientTest.cpp  moc_QtNet.cpp  qtCircularBufferTest.cpp  qtCircularBufferTest.cpp~  test.pro
src/Server/: BabelServer.cpp  BabelServer.hpp  BoostCircularBuffer.cpp  BoostCircularBuffer.hpp  BoostConnexionAcceptor.cpp  BoostConnexionAcceptor.hpp  BoostSerializer.cpp  BoostSerializer.hpp  BoostSocket.cpp  BoostSocket.hpp  Client.cpp  Client.hpp  CommandHandler.cpp  CommandHandler.hpp  ICircularBuffer.hpp  IConnexionAcceptor.hpp  IDatabase.hpp  ISocket.hpp  Main.cpp  Makefile  Message.cpp  Message.hpp  SocketSelector.cpp  SocketSelector.hpp  babel  clientTest
src/Server/test/: #circular_buffer_test.cpp#  a.out  circular_buffer_test.cpp  serializer_test.cpp  testClient.cpp
src/Server/test/clientTest/: fat_main.cpp
src/Server/test/database/: lol.babel  new.babel  test.babel  test2.babel  username.babel
